Design login, registro e perfil

--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -5,22 +5,42 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="nof.airsoft.ProfileActivity">
+    tools:context="nof.airsoft.ProfileActivity"
+    android:background="@color/colorFundoLogin">
 
    <EditText
+       android:padding="10dp"
+       android:layout_marginTop="10dp"
+       android:layout_marginLeft="20dp"
+       android:layout_marginRight="20dp"
+       android:background="@drawable/input_background"
        android:id="@+id/editTextNome"
-       android:layout_margin="5dp"
        android:hint="Nome"
        android:layout_width="match_parent"
-       android:layout_height="wrap_content" />
+       android:layout_height="45dp" />
 
     <EditText
+        android:padding="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:background="@drawable/input_background"
         android:inputType="phone"
         android:id="@+id/editTextContato"
-        android:layout_margin="5dp"
         android:hint="Contato"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="45dp" />
+
+ <EditText
+     android:padding="10dp"
+     android:layout_marginTop="10dp"
+     android:layout_marginLeft="20dp"
+     android:layout_marginRight="20dp"
+     android:background="@drawable/input_background"
+     android:id="@+id/editTextEndereco"
+     android:hint="Endereço: Rua exemplo -- numero"
+     android:layout_width="match_parent"
+     android:layout_height="45dp" />
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -29,17 +49,21 @@
         android:layout_gravity="center">
 
     <Button
+        android:background="@drawable/input_background"
         android:layout_width="wrap_content"
+        android:layout_margin="5dp"
         android:layout_height="wrap_content"
         android:id="@+id/buttonSalvar"
         android:layout_gravity="center"
         android:text="Salvar"/>
 
     <Button
+        android:layout_margin="5dp"
+        android:background="@drawable/input_background"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/buttonLogout"
-        android:text="Sair"/>
+        android:text="Logout"/>
     </LinearLayout>
 
 </LinearLayout>
