--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,33 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="nof.airsoft.RegistroActivity">
+    tools:context="nof.airsoft.RegistroActivity"
+    android:background="@color/colorFundoLogin"
+    android:weightSum="1">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Login"
-        android:textSize="50dp"
-        android:layout_gravity="center"/>
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_marginTop="70dp"
+        android:layout_width="160dp"
+        android:layout_height="150dp"
+        android:layout_gravity="center"
+        app:srcCompat="@android:drawable/sym_def_app_icon" />
 
     <EditText
-        android:layout_margin="15dp"
+        android:layout_marginTop="70dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
         android:inputType="textEmailAddress"
-        android:layout_height="wrap_content"
+        android:padding="10dp"
+        android:layout_height="45dp"
+        android:background="@drawable/input_background"
         android:layout_width="match_parent"
         android:hint="Email"
         android:id="@+id/editText_email"/>
 
     <EditText
-        android:layout_margin="15dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
         android:inputType="textPassword"
+        android:padding="10dp"
         android:id="@+id/editText_senha"
+        android:background="@drawable/input_background"
         android:hint="Senha"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="45dp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -35,17 +47,20 @@
         android:id="@+id/textViewRecuperar"
         android:text="Esqueci minha senha"
         android:layout_gravity="right"
-        android:layout_marginRight="10dp"/>
+        android:layout_marginRight="30dp"
+        android:layout_marginTop="5dp"/>
 
     <Button
         android:id="@+id/buttonSignin"
         android:layout_gravity="center"
         android:text="Entrar"
-        android:layout_width="160dp"
-        android:layout_height="50dp" />
+        android:layout_marginTop="10dp"
+        android:background="@drawable/input_background"
+        android:layout_width="266dp"
+        android:layout_height="50dp"
+        android:layout_weight="0.01" />
 
     <TextView
-        android:layout_marginTop="10dp"
         android:textAlignment="center"
         android:text="Ainda não possui registro? Clique aqui !"
         android:id="@+id/textView_register"
