--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -5,10 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="nof.airsoft.RegistroActivity"
-    android:background="@color/colorFundoLogin">
+    android:background="@color/colorFundo">
 
     <EditText
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="150dp"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
         android:inputType="textEmailAddress"
@@ -32,8 +32,9 @@
         android:hint="Senha" />
 
     <Button
-        android:background="@drawable/input_background"
-        android:layout_marginTop="10dp"
+        android:background="@color/colorPrimaria"
+        android:textColor="@color/colorSecundaria"
+        android:layout_marginTop="40dp"
         android:id="@+id/buttonRegister"
         android:layout_gravity="center"
         android:text="Registrar"
@@ -43,6 +44,7 @@
     <TextView
         android:layout_marginTop="10dp"
         android:textAlignment="center"
+        android:textColor="@color/colorSecundaria"
         android:text="Já possui registro? Clique aqui!"
         android:id="@+id/textView_signin"
         android:layout_width="match_parent"
