--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -15,7 +15,7 @@
     <item
         android:id="@+id/navigation_estatisticas"
         android:icon="@drawable/ic_home_black_24dp"
-        android:title="Estatísticas"/>
+        android:title="Meu Perfil"/>
 
 
 
