--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,6 +12,7 @@
     <color name="colorSecundaria">#29B6f6</color>
     <color name="colorGray">#8698A4</color>
     <color name="colorRed">#FF3333</color>
+    <color name="colorSelect">#6b95b1</color>
 
 </resources>
 
