--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="nof.airsoft.ProfileActivity"
-    android:background="@color/colorFundoLogin">
+    android:background="@color/colorFundo">
 
    <EditText
        android:padding="10dp"
@@ -45,11 +45,14 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         android:orientation="horizontal"
         android:layout_gravity="center">
 
     <Button
         android:background="@drawable/input_background"
+        android:backgroundTint="@color/colorPrimaria"
+        android:textColor="@color/colorSecundaria"
         android:layout_width="wrap_content"
         android:layout_margin="5dp"
         android:layout_height="wrap_content"
@@ -60,6 +63,8 @@
     <Button
         android:layout_margin="5dp"
         android:background="@drawable/input_background"
+        android:backgroundTint="@color/colorPrimaria"
+        android:textColor="@color/colorSecundaria"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/buttonLogout"
