--- a/app/src/main/res/layout/content_reset.xml
+++ b/app/src/main/res/layout/content_reset.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true"
-    android:background="@color/colorFundoLogin"
+    android:background="@color/colorFundo"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="nof.airsoft.ResetActivity">
 
@@ -34,6 +34,8 @@
 
         <Button
             android:background="@drawable/input_background"
+            android:backgroundTint="@color/colorPrimaria"
+            android:textColor="@color/colorSecundaria"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_alignParentBottom="true"
@@ -43,4 +45,5 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
     </RelativeLayout>
+
 </ScrollView>
