--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -4,18 +4,18 @@
 
     <item
         android:id="@+id/navigation_equipes"
-        android:icon="@drawable/ic_dashboard_black_24dp"
+        android:icon="@drawable/equipes"
         android:title="Equipes" />
 
     <item
         android:id="@+id/navigation_miequipe"
-        android:icon="@drawable/ic_dashboard_black_24dp"
+        android:icon="@drawable/minha_equipe"
         android:title="Minha Equipe"/>
 
     <item
         android:id="@+id/navigation_estatisticas"
-        android:icon="@drawable/ic_home_black_24dp"
-        android:title="Meu Perfil"/>
+        android:icon="@drawable/games"
+        android:title="Jogos marcados"/>
 
 
 
