--- a/app/src/main/res/drawable/button_selector.xml
+++ b/app/src/main/res/drawable/button_selector.xml
@@ -2,5 +2,5 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:drawable="@color/colorPrimaria"></item>
     <item android:drawable="@color/colorSecundaria" android:state_activated="true"></item>
-    <item android:drawable="@color/colorSelect" android:state_pressed="true"></item>
+    <item android:drawable="@color/colorSelect" android:state_focused="true"></item>
 </selector>
