--- a/app/src/main/res/layout/activity_minha_equipe.xml
+++ b/app/src/main/res/layout/activity_minha_equipe.xml
@@ -15,13 +15,59 @@
         android:id="@+id/customToolbar" >
     </include>
 
-    <FrameLayout
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="458dp">
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-    </FrameLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:orientation="horizontal"
+            android:layout_height="wrap_content">
 
+
+            <ImageView
+                android:id="@+id/imageView2"
+                android:layout_width="120dp"
+                android:layout_height="120dp"
+                app:srcCompat="@mipmap/ic_launcher" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:orientation="vertical"
+                android:layout_height="match_parent">
+
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Nome da Equipe"
+                android:textColor="@color/colorSecundaria"
+                android:textSize="15dp"
+                android:layout_marginTop="5dp" />
+
+             <TextView
+                 android:layout_width="wrap_content"
+                 android:layout_height="wrap_content"
+                 android:text="Nome da Equipe"
+                 android:textColor="@color/colorSecundaria"
+                 android:textSize="15dp"
+                 android:layout_marginTop="5dp"/>
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+
+
+        </LinearLayout>
+
+
+    </ScrollView>
 
         <android.support.design.widget.BottomNavigationView
             android:id="@+id/navigation"
@@ -34,8 +80,6 @@
             app:itemTextColor="@color/colorGray"
             app:itemIconTint="@color/colorGray"
             app:itemBackground="@drawable/button_selector"/>
-
-x
 
 </LinearLayout>
 
