--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,53 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="@color/colorFundo"
-    tools:context="nof.airsoft.MainActivity"
-    android:weightSum="1">
+    android:orientation="vertical"
+    android:weightSum="1"
+    tools:context="nof.airsoft.MainActivity">
 
-    <include layout="@layout/tolbar"
-        android:id="@+id/customToolbar" >
-    </include>
+    <include
+        android:id="@+id/customToolbar"
+        layout="@layout/tolbar"></include>
 
     <FrameLayout
+        android:id="@+id/content"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="0dp">
 
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-    </LinearLayout>
-
-        <ListView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/lista_equipes">
-        </ListView>
-
-
-
+    </FrameLayout>
 
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/bottomNavigationView"
-        android:backgroundTint="@color/colorTolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
+        android:layout_gravity="start"
         android:background="?android:attr/windowBackground"
-        app:menu="@menu/navigation"
-        app:itemTextColor="@color/colorGray"
+        android:backgroundTint="@color/colorTolbar"
+        app:itemBackground="@drawable/button_selector"
         app:itemIconTint="@color/colorGray"
-        app:itemBackground="@drawable/button_selector"/>
+        app:itemTextColor="@color/colorGray"
+        app:menu="@menu/navigation">
 
-    </FrameLayout>
+    </android.support.design.widget.BottomNavigationView>
 
 
 </LinearLayout>
