--- a/app/src/main/res/layout/fragment_jogos_marcados.xml
+++ b/app/src/main/res/layout/fragment_jogos_marcados.xml
@@ -1,207 +1,14 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@color/colorFundo"
-    tools:context="nof.airsoft.MainActivity"
-    android:weightSum="1">
+    tools:context="nof.airsoft.Fragments.EquipesFragment">
 
-    <ScrollView
+    <!-- TODO: Update blank fragment layout -->
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="458dp">
+        android:layout_height="match_parent"
+        android:textColor="@color/colorSecundaria"
+        android:text="@string/jogos_marcados" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-
-                <ImageView
-                    android:id="@+id/imageView2"
-                    android:layout_width="120dp"
-                    android:layout_height="120dp"
-                    app:srcCompat="@mipmap/ic_launcher" />
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical">
-
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="5dp"
-                        android:text="Nome da Equipe"
-                        android:textColor="@color/colorBranca"
-                        android:textSize="20dp" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="5dp"
-                        android:text="Endereço: "
-                        android:textColor="@color/colorSecundaria"
-                        android:textSize="15dp" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="5dp"
-                        android:text="Contato: "
-                        android:textColor="@color/colorSecundaria"
-                        android:textSize="15dp" />
-
-                </LinearLayout>
-
-                <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Participar"
-                    android:layout_gravity="bottom" />
-            </LinearLayout>
-
-            <android.support.v7.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                app:cardBackgroundColor="@color/colorPrimaryDark">
-
-            </android.support.v7.widget.CardView>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Descrição"
-                    android:textColor="@color/colorBranca"
-                    android:textSize="20dp"
-                    android:layout_margin="10dp" />
-
-                <android.support.v7.widget.CardView
-                    android:layout_marginTop="100dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    app:cardBackgroundColor="@color/colorPrimaryDark">
-
-                </android.support.v7.widget.CardView>
-
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="10dp"
-                    android:text="Participantes"
-                    android:textColor="@color/colorBranca"
-                    android:textSize="20dp"/>
-
-                <HorizontalScrollView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal">
-
-
-                        <ImageView
-                            android:id="@+id/cara1"
-                            android:layout_margin="3dp"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            app:srcCompat="@mipmap/ic_launcher" />
-
-                        <ImageView
-                            android:id="@+id/cara2"
-                            android:layout_margin="3dp"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            app:srcCompat="@mipmap/ic_launcher" />
-
-                        <ImageView
-                            android:id="@+id/cara3"
-                            android:layout_margin="3dp"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            app:srcCompat="@mipmap/ic_launcher" />
-
-                        <ImageView
-                            android:id="@+id/cara4"
-                            android:layout_margin="3dp"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            app:srcCompat="@mipmap/ic_launcher" />
-
-                        <ImageView
-                            android:id="@+id/cara5"
-                            android:layout_margin="3dp"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            app:srcCompat="@mipmap/ic_launcher" />
-
-                        <ImageView
-                            android:id="@+id/cara6"
-                            android:layout_margin="3dp"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            app:srcCompat="@mipmap/ic_launcher" />
-
-                        <ImageView
-                            android:id="@+id/cara7"
-                            android:layout_margin="3dp"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            app:srcCompat="@mipmap/ic_launcher" />
-
-                        <ImageView
-                            android:id="@+id/cara8"
-                            android:layout_margin="3dp"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            app:srcCompat="@mipmap/ic_launcher" />
-
-                        <ImageView
-                            android:id="@+id/cara9"
-                            android:layout_margin="3dp"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            app:srcCompat="@mipmap/ic_launcher" />
-                    </LinearLayout>
-
-
-
-                </HorizontalScrollView>
-
-                <android.support.v7.widget.CardView
-                    android:layout_marginTop="5dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    app:cardBackgroundColor="@color/colorPrimaryDark">
-
-                </android.support.v7.widget.CardView>
-
-
-
-            </LinearLayout>
-
-        </LinearLayout>
-
-
-    </ScrollView>
-
-</LinearLayout>
-
+</FrameLayout>
