--- a/app/src/main/res/layout/fragment_equipes.xml
+++ b/app/src/main/res/layout/fragment_equipes.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="nof.airsoft.Fragments.EquipesFragment">
+    tools:context="nof.airsoft.layout.EquipesFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
