--- a/app/src/main/res/layout/fragment_registro_equipe.xml
+++ b/app/src/main/res/layout/fragment_registro_equipe.xml
@@ -36,6 +36,7 @@
         android:layout_marginTop="40dp"
         android:id="@+id/registrarEquipe"
         android:layout_gravity="center"
+        android:onClick="onClick"
         android:text="Registrar"
         android:layout_width="160dp"
         android:layout_height="50dp" />
