--- a/app/src/main/res/layout/fragment_sem_equipe.xml
+++ b/app/src/main/res/layout/fragment_sem_equipe.xml
@@ -8,7 +8,7 @@
         android:id="@+id/recycler_membros"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="gone"
+        android:visibility="visible"
 
 
         ></android.support.v7.widget.RecyclerView>
