--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -26,6 +26,18 @@
         android:layout_height="45dp"
 
         android:layout_width="match_parent"
+        android:hint="Nick"
+        android:id="@+id/editNick"/>
+
+    <EditText
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+        android:inputType="textEmailAddress"
+        android:padding="10dp"
+        android:layout_height="45dp"
+
+        android:layout_width="match_parent"
         android:hint="Email"
         android:id="@+id/editEmail"/>
 
@@ -41,21 +53,11 @@
         android:layout_width="match_parent"
         android:layout_height="45dp" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/textForgotPassword"
-        android:text="Esqueci minha senha"
-        android:textColor="@color/colorSecundaria"
-        android:layout_gravity="right"
-
-        android:layout_marginRight="30dp"
-        android:layout_marginTop="5dp"/>
 
     <Button
-        android:id="@+id/buttonSignin"
+        android:id="@+id/buttonRegister"
         android:layout_gravity="center"
-        android:text="Entrar"
+        android:text="Registrar"
         android:textColor="@android:color/white"
         android:layout_marginTop="40dp"
         android:background="@drawable/input_background"
@@ -68,8 +70,8 @@
         android:layout_marginTop="10dp"
         android:textAlignment="center"
         android:textColor="@color/colorSecundaria"
-        android:text="Ainda não possui registro? Clique aqui!"
-        android:id="@+id/textRegister"
+        android:text="Já é membro? Entrar"
+        android:id="@+id/textLogin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
